fixes some layout bugs on mobile

--- a/public/Drax-Project-Website/css/general.sass
+++ b/public/Drax-Project-Website/css/general.sass
@@ -23,7 +23,7 @@ header
 	padding: 3rem 1rem 0rem 1rem
 	color: $fadedYellow
 	.bandName
-		font-size: 4em
+		font-size: 3.5em
 		font-family: $sixCaps
 		letter-spacing: 0.5rem
 		text-align: center
@@ -32,11 +32,11 @@ header
 	#subtitle
 		font-family: $sixCaps
 		text-align: center
-		letter-spacing: 0.25em
-		font-size: 2em
+		letter-spacing: 0.1em
+		font-size: 2.2em
 	button
 		letter-spacing: 0.2rem
-		font-size: 1.6em
+		font-size: 1.2em
 		padding: 1.5rem
 		margin: 0rem 0rem 1rem 0rem		
 
