--- a/public/Drax-Project-Website/css/media-queries.sass
+++ b/public/Drax-Project-Website/css/media-queries.sass
@@ -3,6 +3,30 @@
 		&:checked + .page-wrap
 			.page-content
 				padding-left: 0px
+	.top
+		.bandName
+			font-size: 4rem
+		#subtitle
+			font-family: $sixCaps
+			text-align: center
+			letter-spacing: 0.25em
+			font-size: 2em
+		button
+			letter-spacing: 0.2rem
+			font-size: 1.6em
+			padding: 1.5rem
+			margin: 0rem 0rem 1rem 0rem	
+	#social-icons
+		display: block
+		margin: auto
+		text-align: center
+		color: black
+		background-color: white
+		height: 100%
+		.fa
+			font-size: 5.2rem
+			padding-left: 1rem
+			padding-right: 1rem
 @media (min-width: 481px)
 @media (min-width: 641px)
 	#toggler
