--- a/public/Drax-Project-Website/css/social.sass
+++ b/public/Drax-Project-Website/css/social.sass
@@ -6,7 +6,7 @@
 	background-color: white
 	height: 100%
 	.fa
-		font-size: 5.2rem
+		font-size: 4rem
 		padding-left: 1rem
 		padding-right: 1rem
 
