--- a/public/Drax-Project-Website/css/style.css
+++ b/public/Drax-Project-Website/css/style.css
@@ -120,7 +120,7 @@
   background-color: white;
   height: 100%; }
   #social-icons .fa {
-    font-size: 5.2rem;
+    font-size: 4rem;
     padding-left: 1rem;
     padding-right: 1rem; }
 
@@ -217,7 +217,7 @@ header {
   padding: 3rem 1rem 0rem 1rem;
   color: rgba(235, 235, 0, 0.72); }
   .top .bandName {
-    font-size: 4em;
+    font-size: 3.5em;
     font-family: "Six Caps", sans-serif;
     letter-spacing: 0.5rem;
     text-align: center;
@@ -226,11 +226,11 @@ header {
   .top #subtitle {
     font-family: "Six Caps", sans-serif;
     text-align: center;
-    letter-spacing: 0.25em;
-    font-size: 2em; }
+    letter-spacing: 0.1em;
+    font-size: 2.2em; }
   .top button {
     letter-spacing: 0.2rem;
-    font-size: 1.6em;
+    font-size: 1.2em;
     padding: 1.5rem;
     margin: 0rem 0rem 1rem 0rem; }
 
@@ -296,7 +296,32 @@ footer {
 
 @media(min-width: 320px) {
   #toggler:checked + .page-wrap .page-content {
-    padding-left: 0px; } }
+    padding-left: 0px; }
+
+  .top .bandName {
+    font-size: 4rem; }
+  .top #subtitle {
+    font-family: "Six Caps", sans-serif;
+    text-align: center;
+    letter-spacing: 0.25em;
+    font-size: 2em; }
+  .top button {
+    letter-spacing: 0.2rem;
+    font-size: 1.6em;
+    padding: 1.5rem;
+    margin: 0rem 0rem 1rem 0rem; }
+
+  #social-icons {
+    display: block;
+    margin: auto;
+    text-align: center;
+    color: black;
+    background-color: white;
+    height: 100%; }
+    #social-icons .fa {
+      font-size: 5.2rem;
+      padding-left: 1rem;
+      padding-right: 1rem; } }
 @media (min-width: 641px) {
   #toggler:checked + .page-wrap .page-content {
     padding-left: 180px; }
